fix: wrong usage of flags during conversion of the jupyter notebooks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             # Export the .ipynb files to .py:
             - run:
                 name: Notebook to scripts
-                command: jupyter nbconvert --to script *.ipynb
+                command: jupyter nbconvert *.ipynb --to script
             # Caches dependencies:
             - save_cache:
                 key: memory_hole
