--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,16 @@
 version: 2.1
-jobs:
-    setup:
-        # set working directory
-        working_directory: /memory_hole
+
+executors:
+    director:
         # set up the docker environment
         docker:
             - image: circleci/python:latest # Use the latest python docker.
+        # set working directory
+        working_directory: /memory_hole
+
+jobs:
+    setup:
+        executor: director
         steps:
             # Checkout source files:
             - checkout
@@ -42,7 +47,7 @@ jobs:
         # docker: 
             # - image: circleci/python:latest # Use the latest python docker.
         # Define executor:
-        executor: setup
+        executor: director
         steps:
             - attach_workspace:
                 at: /memory_hole/workspace
@@ -60,7 +65,7 @@ jobs:
         # docker:
             # - image: circleci/python:latest # Use the latest python docker.
         # Define executor:
-        executor: setup
+        executor: director
         steps:
             - attach_workspace:
                 at: /memory_hole/workspace
