fix(circleci): further refactoring of the integrated tests 4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ executors:
         docker:
             - image: circleci/python:latest # Use the latest python docker.
         # set working directory
-        working_directory: /.
+        # working_directory: /.
 
 jobs:
     setup:
@@ -50,7 +50,7 @@ jobs:
         executor: director
         steps:
             - attach_workspace:
-                at: /./workspace
+                at: workspace
             - run:
                 name: Unit_testing
                 command: python test.py
@@ -68,7 +68,7 @@ jobs:
         executor: director
         steps:
             - attach_workspace:
-                at: /./workspace
+                at: workspace
             # Cyclomatic complexity
             - run:
                 name: Cyclomatic complexity
