--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
                 name: Install radon
                 command: pip install radon --user
             - run:
+                name: Install matplotlib
+                command: pip install matplotlib --user
+            - run:
                 name: Install jupyter
                 command: pip install jupyter --user
             - run:
