--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,13 @@ jobs:
         steps:
             # Checkout source files:
             - checkout
+            # Grant access to dependency locations:
+            - run: sudo chown -R circleci:circleci /usr/local/bin
+            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+            # create cache for python dependencies:
+            - restore_cache:
+                key: my_dependencies
+      
             # Instalation of the required packages:
             - run:
                 name: Install pandoc
@@ -42,6 +49,11 @@ jobs:
                     - solution.py
                     - objectsTest.py
                     - Objects.py
+            - save_cache:
+                key: my_dependencies
+                paths:
+                    - "/usr/local/bin"
+                    - "/usr/local/lib/python3.6/site-packages"
 
     auto-test:
         # set working directory
