--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,21 @@ jobs:
             - run:
                 name: Install notebook converter
                 command: pip install nbconvert --user
-            # Export the .ipynb files to .py:
+            - save_cache:
+                key: my_dependencies
+                paths:
+                    - "/usr/local/bin"
+                    - "/usr/local/lib/python3.6/site-packages"
+
+    auto-export:
+        # Define executor:
+        executor: director
+        # load cache:
+        - restore_cache:
+            keys:
+                - my_dependencies 
+        steps:
+        # Export the .ipynb files to .py:
             - run:
                 name: Notebook to scripts
                 command: jupyter nbconvert *.ipynb --to script
@@ -50,20 +64,14 @@ jobs:
                     - solution.py
                     - objectsTest.py
                     - Objects.py
-            - save_cache:
-                key: my_dependencies
-                paths:
-                    - "/usr/local/bin"
-                    - "/usr/local/lib/python3.6/site-packages"
 
     auto-test:
-        # set working directory
-        # working_directory: ~/memory_hole
-        # run tests:
-        # docker: 
-            # - image: circleci/python:latest # Use the latest python docker.
         # Define executor:
         executor: director
+        # load cache:
+        - restore_cache:
+            keys:
+                - my_dependencies 
         steps:
             - attach_workspace:
                 at: /workspace
@@ -75,13 +83,12 @@ jobs:
                 command: python objectsTest.py    
   
     auto-radon:
-        # set working directory
-        # working_directory: ~/memory_hole
-        # Execute automatically radon on your code
-        # docker:
-            # - image: circleci/python:latest # Use the latest python docker.
         # Define executor:
         executor: director
+        # load cache:
+        - restore_cache:
+            keys:
+                - my_dependencies 
         steps:
             - attach_workspace:
                 at: /workspace
@@ -106,9 +113,14 @@ workflows:
   my_workflow:
     jobs:
         - setup
+        - auto-export:
+            requires:
+                - setup
         - auto-test:
             requires:
                 - setup
+                - auto-export
         - auto-radon:
             requires:
                 - setup
+                - auto-export
