--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ executors:
     director:
         # set up the docker environment
         docker:
-            - image: circleci/python:3.6.4 # Use the latest python docker.
+            - image: circleci/python:latest # Use the latest python docker.
         # set working directory
-        #working_directory: /tmp
+        # working_directory: /tmp
 
 jobs:
     setup:
@@ -14,10 +14,10 @@ jobs:
         
         steps:
             # Checkout source files:
-            - checkout
+            - checkout 
             # Grant access to dependency locations:
             - run: sudo chown -R circleci:circleci /usr/local/bin
-            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # create cache for python dependencies:
             - restore_cache:
                 key: my_dependencies
