--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,14 @@ jobs:
         
         steps:
             # Checkout source files:
-            - checkout 
+            - checkout
+            # Grant access to dependency locations:
+            - run: sudo chown -R circleci:circleci /usr/local/bin
+            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # create cache for python dependencies:
             - restore_cache:
                 key: v1_dependencies
-            # unstall tar and untar for chache management:
-            - run: sudo install tar untar
-            # Grant access to dependency locations:
+            # Chow a second time because some guy on a forum said it might help: 
             - run: sudo chown -R circleci:circleci /usr/local/bin
             - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # Instalation of the required packages:
