--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,21 +9,24 @@ executors:
         # working_directory: /tmp
 
 jobs:
-    setup:
+    build:
         executor: director
         
         steps:
             # Checkout source files:
             - checkout
             # Grant access to dependency locations:
-            - run: sudo chown -R circleci:circleci /usr/local/bin
-            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
+            #- run: sudo chown -R circleci:circleci /usr/local/bin
+            #- run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # create cache for python dependencies:
             - restore_cache:
-                key: v2_dependencies
-            # Chow a second time because some guy on a forum said it might help: 
-            #- run: sudo chown -R circleci:circleci /usr/local/bin
-            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
+                key: v3_dependencies
+            # create python virtual environment to move dependencies
+            - run:
+                name: Install Python deps in a venv
+                command: |
+                    python -m venv venv
+                    . venv/bin/activate
             # Instalation of the required packages:
             - run:
                 name: Install pandoc
@@ -41,10 +44,11 @@ jobs:
                 name: Install notebook converter
                 command: pip install nbconvert --user
             - save_cache:
-                key: v2_dependencies
+                key: v3_dependencies
                 paths:
-            #        - "/usr/local/bin"
-                    - "/usr/local/lib/python3.6/site-packages"
+                    - "venv"
+                    # - "/usr/local/bin"
+                    # - "/usr/local/lib/python3.6/site-packages"
 
     auto-export:
         # Define executor:
@@ -53,7 +57,7 @@ jobs:
         steps:
              # load cache:
             - restore_cache:
-                key: v2_dependencies 
+                key: v3_dependencies 
             # Create file to serve as workspace:
             - run: mkdir -p workspace
             # Export the .ipynb files to .py:
@@ -76,7 +80,7 @@ jobs:
         steps:
             # load cache:
             - restore_cache:
-                key: v2_dependencies        
+                key: v3_dependencies        
             - attach_workspace:
                 at: /workspace
             - run:
@@ -93,7 +97,7 @@ jobs:
         steps:
             # load cache:
             - restore_cache:
-                key: v2_dependencies 
+                key: v3_dependencies 
             - attach_workspace:
                 at: /workspace
             # Cyclomatic complexity
@@ -116,15 +120,15 @@ workflows:
   version: 2
   my_workflow:
     jobs:
-        - setup
+        - build
         - auto-export:
             requires:
-                - setup
+                - build
         - auto-test:
             requires:
-                - setup
+                - build
                 - auto-export
         - auto-radon:
             requires:
-                - setup
+                - build
                 - auto-export
