--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,17 +16,17 @@ jobs:
             # Checkout source files:
             - checkout
             # Grant access to dependency locations:
-            #- run: sudo chown -R circleci:circleci /usr/local/bin
-            #- run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
+            - run: sudo chown -R circleci:circleci /usr/local/bin
+            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # create cache for python dependencies:
             - restore_cache:
                 key: v3_dependencies
             # create python virtual environment to move dependencies
-            - run:
-                name: Install Python deps in a venv
-                command: |
-                    python -m venv venv
-                    . venv/bin/activate
+            # - run:
+                # name: Install Python deps in a venv
+                # command: |
+                    # python -m venv venv
+                    # . venv/bin/activate
             # Instalation of the required packages:
             - run:
                 name: Install pandoc
@@ -46,9 +46,9 @@ jobs:
             - save_cache:
                 key: v3_dependencies
                 paths:
-                    - "venv"
-                    # - "/usr/local/bin"
-                    # - "/usr/local/lib/python3.6/site-packages"
+                    # - "venv"
+                    - "/usr/local/bin"
+                    - "/usr/local/lib/python3.6/site-packages"
 
     auto-export:
         # Define executor:
