--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,12 @@ jobs:
             # Checkout source files:
             - checkout
             # Grant access to dependency locations:
-            - run: sudo chown -R circleci:circleci /usr/local/bin
-            - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
+            # - run: sudo chown -R circleci:circleci /usr/local/bin
+            # - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
             # create cache for python dependencies:
-            - restore_cache:
-                key: v4_dependencies
+            # - restore_cache:
+                # key: v4_dependencies
+                
             # Instalation of the required packages:
             - run:
                 name: Install Python dependencies
@@ -30,16 +31,18 @@ jobs:
                     pip install matplotlib --user
                     pip install jupyter --user
                     pip install nbconvert --user
-            - save_cache:
-                key: v4_dependencies
-                paths:
+            # - save_cache:
+                # key: v4_dependencies
+                # paths:
                     # - "venv"
-                    - "/usr/local/bin"
-                    - "/usr/local/lib/python3.6/site-packages"
+                    # - "/usr/local/bin"
+                    # - "/usr/local/lib/python3.6/site-packages"
                     
             # Export notebooks to script
+            
             # Create file to serve as workspace:
             # - run: mkdir -p workspace
+            
             # Export the .ipynb files to .py:
             - run:
                 name: Notebook to scripts
@@ -82,10 +85,11 @@ jobs:
         
         steps:
             # load cache:
-            - restore_cache:
-                key: v4_dependencies        
+            # - restore_cache:
+                # key: v4_dependencies   
+                
             - attach_workspace:
-                at: /workspace
+                at: /home/circleci/project
             - run:
                 name: Unit_testing
                 command: python test.py
@@ -99,10 +103,10 @@ jobs:
 
         steps:
             # load cache:
-            - restore_cache:
-                key: v4_dependencies 
+            # - restore_cache:
+                # key: v4_dependencies 
             - attach_workspace:
-                at: /workspace
+                at: /home/circleci/project
             # Cyclomatic complexity
             - run:
                 name: Cyclomatic complexity
