--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,6 @@ executors:
         # set up the docker environment
         docker:
             - image: circleci/python:latest # Use the latest python docker.
-        # set working directory
-        # working_directory: /tmp
 
 jobs:
     build:
@@ -15,9 +13,7 @@ jobs:
         steps:
             # Checkout source files:
             - checkout
-            # Grant access to dependency locations:
-            # - run: sudo chown -R circleci:circleci /usr/local/bin
-            # - run: sudo chown -R circleci:circleci /usr/local/lib/python3.*/site-packages
+            
             # create cache for python dependencies:
             # - restore_cache:
                 # key: v4_dependencies
@@ -36,7 +32,7 @@ jobs:
                     # - "/usr/local/bin"
                     # - "/usr/local/lib/python3.6/site-packages"
                     
-            # Export notebooks to script
+            # Export notebooks to script:
             
             # Create file to serve as workspace:
             # - run: mkdir -p workspace
@@ -53,29 +49,20 @@ jobs:
                     - solution.py
                     - objectsTest.py
                     - Objects.py
-
-    # auto-export:
-        # Define executor:
-        # executor: director
-        
-        # steps:
-             # load cache:
-            # - restore_cache:
-                # key: v4_dependencies 
-            # Create file to serve as workspace:
-            # - run: mkdir -p workspace
-            # Export the .ipynb files to .py:
-            # - run:
-                # name: Notebook to scripts
-                # command: jupyter nbconvert *.ipynb --to script
-            # Dependencies:
-            # - persist_to_workspace:
-                # root: workspace
-                # paths:
-                    # - test.py
-                    # - solution.py
-                    # - objectsTest.py
-                    # - Objects.py
+                    
+            # Packaging using circleci's artifacts:
+            
+            - store_artifacts:
+                path:
+                    - solution.py
+                    - Object.py
+                destination: solutions
+          
+            - store_artifacts:
+                path: 
+                    - test.py
+                    - objectsTest.py
+                destination: tests
 
     auto-test:
         # Define executor:
