--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ jobs:
             - run:
                 name: create necessary directories
                 command: |
+                    mkdir test-results
                     mkdir test-results/solution
                     mkdir test-results/oop_solution
                     
